[gd_scene load_steps=26 format=2]

[ext_resource path="res://UI/Start Screen/Start Screen.gd" type="Script" id=1]
[ext_resource path="res://UI/Start Screen/Stats.gd" type="Script" id=2]
[ext_resource path="res://Assets/Critters/DragonWhiteDragon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Critters/DragonSilverDragon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Critters/DragonVioletDragon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Critters/DragonBlueDragon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Critters/DragonBlackDragon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Critters/DragonRedDragon.png" type="Texture" id=8]
[ext_resource path="res://Assets/Critters/DragonGreenDragon.png" type="Texture" id=9]
[ext_resource path="res://Assets/Critters/DragonYellowDragon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Miscellaneous/raleway.medium.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/Classes/Banker.png" type="Texture" id=12]
[ext_resource path="res://Assets/Classes/FreedomFighter.png" type="Texture" id=13]
[ext_resource path="res://Assets/Miscellaneous/Theme.tres" type="Theme" id=14]
[ext_resource path="res://Assets/Classes/Archeologist.png" type="Texture" id=15]
[ext_resource path="res://Assets/Classes/Herbalogue.png" type="Texture" id=16]
[ext_resource path="res://Assets/Classes/Perry.png" type="Texture" id=17]
[ext_resource path="res://Assets/Classes/Rogue.png" type="Texture" id=18]
[ext_resource path="res://Assets/Classes/Savant.png" type="Texture" id=19]
[ext_resource path="res://Assets/Classes/Mercenary.png" type="Texture" id=20]

[sub_resource type="Animation" id=1]
resource_name = "Dancing Dragons"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/TextureRect:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/TextureRect2:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.802646, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/TextureRect3:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/TextureRect4:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HBoxContainer2/TextureRect5:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HBoxContainer2/TextureRect6:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HBoxContainer2/TextureRect7:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HBoxContainer2/TextureRect8:flip_h")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/TextureRect:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/TextureRect2:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/TextureRect3:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/TextureRect4:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HBoxContainer2/TextureRect5:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HBoxContainer2/TextureRect6:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HBoxContainer2/TextureRect7:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HBoxContainer2/TextureRect8:flip_h")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 238, 202 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 14 )
script = ExtResource( 1 )

[node name="DancingDragonsPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DancingDragonsContainer")
"anims/Dancing Dragons" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="StartContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
rect_min_size = Vector2( 1880, 1040 )

[node name="VBoxContainer2" type="VBoxContainer" parent="StartContainer"]
margin_right = 1880.0
margin_bottom = 1044.0

[node name="CenterContainer" type="CenterContainer" parent="StartContainer/VBoxContainer2"]
margin_right = 1880.0
margin_bottom = 400.0
rect_min_size = Vector2( 1880, 400 )

[node name="HBoxContainer" type="HBoxContainer" parent="StartContainer/VBoxContainer2"]
margin_top = 404.0
margin_right = 1880.0
margin_bottom = 1044.0
rect_min_size = Vector2( 1880, 640 )

[node name="VBoxContainer" type="VBoxContainer" parent="StartContainer/VBoxContainer2/HBoxContainer"]
margin_right = 300.0
margin_bottom = 640.0
rect_min_size = Vector2( 300, 640 )
alignment = 2

[node name="Start game" type="Button" parent="StartContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 300.0
margin_bottom = 432.0
rect_min_size = Vector2( 260, 100 )
text = "Start game"

[node name="Stats" type="Button" parent="StartContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 300.0
margin_bottom = 536.0
rect_min_size = Vector2( 260, 100 )
text = "Stats"

[node name="Exit game" type="Button" parent="StartContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 300.0
margin_bottom = 640.0
rect_min_size = Vector2( 260, 100 )
text = "Exit game"

[node name="StatsContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
rect_min_size = Vector2( 1880, 1040 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="StatsContainer"]
margin_right = 1880.0
margin_bottom = 1040.0

[node name="ScrollContainer" type="ScrollContainer" parent="StatsContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 800.0
rect_min_size = Vector2( 1880, 800 )

[node name="VBoxContainer" type="VBoxContainer" parent="StatsContainer/VBoxContainer/ScrollContainer"]

[node name="Back" type="Button" parent="StatsContainer/VBoxContainer"]
margin_top = 804.0
margin_right = 1880.0
margin_bottom = 904.0
rect_min_size = Vector2( 260, 100 )
text = "Back"

[node name="CharacterCreationContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1004.0
mouse_filter = 2

[node name="Title" type="Label" parent="CharacterCreationContainer"]
margin_right = 1920.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 40 )
custom_fonts/font = SubResource( 3 )
text = "Create Character"
align = 1
valign = 1

[node name="ClassesContainer" type="GridContainer" parent="CharacterCreationContainer"]
margin_top = 44.0
margin_right = 1920.0
margin_bottom = 862.0
rect_min_size = Vector2( 1920, 814 )
mouse_filter = 2
columns = 4

[node name="Archeologist" type="PanelContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_right = 480.0
margin_bottom = 409.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="ArcheologistContainer" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer/Archeologist"]
margin_left = 2.0
margin_top = 2.0
margin_right = 478.0
margin_bottom = 407.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer"]
margin_right = 476.0
margin_bottom = 380.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 15 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer"]
margin_top = 384.0
margin_right = 476.0
margin_bottom = 405.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Archeologist[/center]"
text = "Archeologist"
fit_content_height = true

[node name="Area2D" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer/Area2D"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Banker" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_left = 484.0
margin_right = 960.0
margin_bottom = 409.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Banker"]
margin_right = 476.0
margin_bottom = 384.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Banker"]
margin_top = 388.0
margin_right = 476.0
margin_bottom = 409.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Banker[/center]"
text = "Banker"
fit_content_height = true

[node name="Area2D2" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Banker"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Banker/Area2D2"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="FreedomFighter" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_left = 964.0
margin_right = 1440.0
margin_bottom = 409.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/FreedomFighter"]
margin_right = 476.0
margin_bottom = 384.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 13 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/FreedomFighter"]
margin_top = 388.0
margin_right = 476.0
margin_bottom = 409.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Freedom Fighter[/center]"
text = "Freedom Fighter"
fit_content_height = true

[node name="Area2D3" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/FreedomFighter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/FreedomFighter/Area2D3"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Herbalogue" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_left = 1444.0
margin_right = 1920.0
margin_bottom = 409.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Herbalogue"]
margin_right = 476.0
margin_bottom = 384.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 16 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Herbalogue"]
margin_top = 388.0
margin_right = 476.0
margin_bottom = 409.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Herbalogue[/center]"
text = "Herbalogue"
fit_content_height = true

[node name="Area2D4" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Herbalogue"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Herbalogue/Area2D4"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Mercenary" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_top = 413.0
margin_right = 480.0
margin_bottom = 818.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Mercenary"]
margin_right = 480.0
margin_bottom = 380.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 20 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Mercenary"]
margin_top = 384.0
margin_right = 480.0
margin_bottom = 405.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Mercenary[/center]"
text = "Mercenary"
fit_content_height = true

[node name="Area2D5" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Mercenary"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Mercenary/Area2D5"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Exterminator" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_left = 484.0
margin_top = 413.0
margin_right = 960.0
margin_bottom = 818.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Exterminator"]
margin_right = 476.0
margin_bottom = 380.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 17 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Exterminator"]
margin_top = 384.0
margin_right = 476.0
margin_bottom = 405.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Exterminator[/center]"
text = "Exterminator"
fit_content_height = true

[node name="Area2D6" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Exterminator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Exterminator/Area2D6"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Rogue" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_left = 964.0
margin_top = 413.0
margin_right = 1440.0
margin_bottom = 818.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Rogue"]
margin_right = 476.0
margin_bottom = 380.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 18 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Rogue"]
margin_top = 384.0
margin_right = 476.0
margin_bottom = 405.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Rogue[/center]"
text = "Rogue"
fit_content_height = true

[node name="Area2D7" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Rogue"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Rogue/Area2D7"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Savant" type="VBoxContainer" parent="CharacterCreationContainer/ClassesContainer"]
margin_left = 1444.0
margin_top = 413.0
margin_right = 1920.0
margin_bottom = 818.0
rect_min_size = Vector2( 476, 404 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="CharacterCreationContainer/ClassesContainer/Savant"]
margin_right = 476.0
margin_bottom = 380.0
rect_min_size = Vector2( 476, 380 )
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 19 )
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="CharacterCreationContainer/ClassesContainer/Savant"]
margin_top = 384.0
margin_right = 476.0
margin_bottom = 405.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Savant[/center]"
text = "Savant"
fit_content_height = true

[node name="Area2D8" type="Area2D" parent="CharacterCreationContainer/ClassesContainer/Savant"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterCreationContainer/ClassesContainer/Savant/Area2D8"]
position = Vector2( 238, 202 )
shape = SubResource( 4 )

[node name="Button" type="Button" parent="CharacterCreationContainer"]
margin_left = 928.0
margin_top = 866.0
margin_right = 991.0
margin_bottom = 902.0
mouse_filter = 1
size_flags_horizontal = 4
disabled = true
action_mode = 0
text = "Okay"

[node name="DancingDragonsContainer" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.75

[node name="LoadingText" type="Label" parent="DancingDragonsContainer"]
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 1920, 200 )
text = "Generating dungeon..."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DancingDragonsContainer"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 236.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 890.0
margin_right = 922.0
margin_bottom = 32.0
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 926.0
margin_right = 958.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="TextureRect3" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 962.0
margin_right = 994.0
margin_bottom = 32.0
texture = ExtResource( 9 )

[node name="TextureRect4" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 998.0
margin_right = 1030.0
margin_bottom = 32.0
texture = ExtResource( 8 )

[node name="HBoxContainer2" type="HBoxContainer" parent="DancingDragonsContainer"]
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 272.0
alignment = 1

[node name="TextureRect5" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 890.0
margin_right = 922.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="TextureRect6" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 926.0
margin_right = 958.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="TextureRect7" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 962.0
margin_right = 994.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="TextureRect8" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 998.0
margin_right = 1030.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[connection signal="pressed" from="StartContainer/VBoxContainer2/HBoxContainer/VBoxContainer/Start game" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="StartContainer/VBoxContainer2/HBoxContainer/VBoxContainer/Stats" to="." method="_on_Stats_Button_pressed"]
[connection signal="pressed" from="StartContainer/VBoxContainer2/HBoxContainer/VBoxContainer/Exit game" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="StatsContainer/VBoxContainer/Back" to="." method="_on_Back_Button_pressed"]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer/Area2D" to="." method="_on_Classes_Pick_input_event" binds= [ "Archeologist" ]]
[connection signal="mouse_entered" from="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer/Area2D" to="." method="_on_Classes_Pick_mouse_entered" binds= [ "Archeologist" ]]
[connection signal="mouse_exited" from="CharacterCreationContainer/ClassesContainer/Archeologist/ArcheologistContainer/Area2D" to="." method="_on_Classes_Pick_mouse_exited" binds= [ "Archeologist" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Banker/Area2D2" to="." method="_on_Classes_Pick_input_event" binds= [ "Banker" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/FreedomFighter/Area2D3" to="." method="_on_Classes_Pick_input_event" binds= [ "Freedom Fighter" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Herbalogue/Area2D4" to="." method="_on_Classes_Pick_input_event" binds= [ "Herbalogue" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Mercenary/Area2D5" to="." method="_on_Classes_Pick_input_event" binds= [ "Mercenary" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Exterminator/Area2D6" to="." method="_on_Classes_Pick_input_event" binds= [ "Exterminator" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Rogue/Area2D7" to="." method="_on_Classes_Pick_input_event" binds= [ "Rogue" ]]
[connection signal="input_event" from="CharacterCreationContainer/ClassesContainer/Savant/Area2D8" to="." method="_on_Classes_Pick_input_event" binds= [ "Savant" ]]
[connection signal="pressed" from="CharacterCreationContainer/Button" to="." method="_on_Start_Game_pressed"]
